--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,10 @@
   <%= csrf_meta_tag %>
 </head>
 <body>
-
+	<% flash.each do |key, value| %>
+	<div class="flash <%= key %>"><%= value %></div>
+	<% end %>
+	
 <%= yield %>
 
 </body>
